# technova_datastrom

./: .gitignore  README.md  TechNova.csv  main.ipynb  pyproject.toml
modeling/: constraint_detection.ipynb  eda.ipynb  evaluation_metrics.py  generate_evaluation.py  model.ipynb  model.py  peer_grouping.ipynb
output/evaluation/: constraint_model_metrics.json  frontier_model_metrics.json  model_metrics.json
utils/: helpers.py  preprocessing.py
